fixed #3272: long study title should be readable and if too long make "..." at the end

--- a/static/css/ecs/forms.scss
+++ b/static/css/ecs/forms.scss
@@ -252,6 +252,14 @@ ul.errorlist {
               margin-bottom: 2px;
               font-weight: normal;
           }
+          select {
+              max-width: 400px;
+              option {
+                  overflow: hidden;
+                  white-space: nowrap;
+                  text-overflow: ellipsis;
+              }
+          }
         }
     }
 }
